--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                   <i class="ss"
                     ><img
                       src="assets/images/Frame 1171276830.png"
-                      class="imgfolder"
+                      class="imgfolder1"
                   /></i>
                   <span class="nav-texts">Master</span>
                   <img
